spacing/light mode fixes

--- a/src/components/Screens/screen.module.scss
+++ b/src/components/Screens/screen.module.scss
@@ -61,6 +61,7 @@
     // pointer-events: none;
 
 
+
     @include device-l {
       width: 55%;
     }
@@ -68,7 +69,7 @@
     @include device-m {
       width: 100%;
       margin: 0;
-      padding: 0 $spacing-m;
+      padding: 0 $spacing-ml;
     }
   
     p {
@@ -110,7 +111,18 @@
       @include device-m {
         width: 100%;
         margin: 0;
-        padding: 0 $spacing-m;
+        padding: 0 $spacing-ml;
+      }
+
+
+      &.prizes1 {
+        padding-left: 4vw;
+        @include device-m {
+          padding-left: 4vw;
+        }
+        @include device-m {
+          padding-left: $spacing-ml;
+        }
       }
     }
   }
@@ -191,6 +203,12 @@
     left: 50%;
     margin: -60px 0 0 -60px;
     transform: rotate(10deg);
+
+    @include device-m {
+      width: 80px;
+      height: 80px;
+      margin: -40px 0 0 -40px;
+    }
 
     path {
       stroke-width: 2px;
@@ -412,7 +430,7 @@
     position: absolute;
     width: 100px;
     left: 50%;
-    bottom: -20px;
+    bottom: -10px;
     opacity: 0.4;
     text-align: center;
     @include type-body;
@@ -429,7 +447,7 @@
   }
   
   @include device-m {
-    padding: $spacing-s $spacing-m $spacing-l;
+    padding: $spacing-s $spacing-m $spacing-xl;
     display: block;
     overflow-x: scroll;
     mask-image: linear-gradient(to right, transparent 0%, black 10%, black 90%, transparent 100%);
@@ -523,6 +541,11 @@
 :global {
   .is-light-mode {
     :local {
+      .screen {
+        .backgroundGradient {
+          background-color: rgba($color-white, 0.8);
+        }
+      }
       .logoSimple {
         path {
           fill: $color-black !important;
